# learn_TRT

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cuda/: CMakeLists.txt
cuda/include/: cv_kernel.cuh  image_kernel.cuh
cuda/src/: image_kernel.cu  kernel.cu
deploy/: CMakeLists.txt
deploy/app/: CMakeLists.txt  main.cpp
deploy/cuda/: readme.txt
deploy/cuda/include/: cuda_tool.h
deploy/cuda/src/: cv_kernel.cu
deploy/onnx-runtime/: CMakeLists.txt
deploy/onnx-runtime/include/: onnx_inference.h
deploy/onnx-runtime/src/: onnx_inference.cpp
deploy/opencv/include/: cv_api.h  cv_utils.hpp
deploy/opencv/src/: cv_utils.cpp  img_crop.cpp  img_process.cpp  img_resize.cpp
deploy/tensorrt/: CMakeLists.txt
deploy/tensorrt/include/: trt_api.h
deploy/tensorrt/src/: build_model.cpp  trt_unit.cpp
develop/: exp.ipynb  feature.py  inference.py  setup.py  tools.py
develop/classify/: __init__.py  config.py  data.py  train.py  util.py
develop/classify/model/: __init__.py  custom_model.py  model.py
develop/qat/: export.py  test.py  train.py
export/: export_onnx.py
include/: build_engine.h  build_model.h  cuda_tool.h  inference.h  kernel.cuh  trt_api.h  trt_base.h  trt_unit.h
onnx/: demo.onnx
opencv/: CMakeLists.txt
opencv/include/: cv_api.h  cv_utils.hpp  image_utils.hpp
opencv/src/: crop_image.cpp  cv_utils.cpp  image_process.cpp  image_utils.cpp  img_crop.cpp  img_process.cpp  img_resize.cpp
ort/: CMakeLists.txt
ort/include/: onnx_inference.h
ort/src/: onnx_inference.cpp
python/: export_onnx.py  model.py  plugin.py
pytorch/: export_onnx.py  model.py  modify_onnx.py
src/: CMakeLists.txt  build_engine.cpp  build_engine2.cpp  build_model.cpp  inference.cpp  main.cpp  tool.cpp  trt_unit.cpp
tensorrt/: CMakeLists.txt
tensorrt/include/: trt_base.h  trt_unit.h
tensorrt/src/: build_engine.cpp
